updates to classes to define user roles and generate JWT token